# slurm_mcp

./: .env.example  .gitignore  PLAN.md  README.md  clusters.json  clusters.json.example  pyproject.toml  test_multi_cluster_live.py
.nvidia-code/: plan.md
.nvidia/skills/cs-oci-ord/: SKILL.md
.nvidia/skills/how-to-add-skill/: SKILL.md
.nvidia/skills/oci-nrt-cs-001/: SKILL.md
docs/: CAPABILITIES.md  TOOLS_SCHEMA.md
scripts/: env_to_mcp_json.py
src/slurm_mcp/: __init__.py  __main__.py  cluster_manager.py  config.py  directories.py  env_to_mcp.py  interactive.py  models.py  profiles.py  server.py  slurm_commands.py  ssh_client.py
tests/: __init__.py  conftest.py  test_cluster_status.py  test_config.py  test_containers.py  test_directories.py  test_interactive.py  test_job_management.py  test_multi_cluster.py  test_profiles.py  test_ssh_client.py
