[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurm-mcp"
version = "0.1.0"
description = "MCP server for remote Slurm cluster management via SSH"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "slurm", "hpc", "ssh", "cluster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "fastmcp>=2.3.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
slurm-mcp = "slurm_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/slurm-mcp"
Documentation = "https://github.com/yourusername/slurm-mcp#readme"
Repository = "https://github.com/yourusername/slurm-mcp"
Issues = "https://github.com/yourusername/slurm-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slurm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
